--- a/NewAgriAid/requirements.txt
+++ b/NewAgriAid/requirements.txt
@@ -1,4 +1,5 @@
 plotly
 mysql-connector-python
 sqlalchemy
-python3-dev default-libmysqlclient-dev build-essential pkg-config
+pkg-config
+mysqlclient
